Fix two column display and tweak the spacing

--- a/myuw/static/css/mobile.less
+++ b/myuw/static/css/mobile.less
@@ -1153,7 +1153,7 @@ label { font-weight: normal; }
     // ACCOUNT PAGE CARDS
     div#medicine-pw, div#netid-pw {
 	    .top-border {border-top: 9px solid #4B2E84;}
-	    .med-logo {margin:10px 0px 5px 0px; clear: both; float: right;} 
+	    .med-logo {margin:0px; clear: both; float: right;} 
 	    h3 {clear:both;}
 
 	    .update-note {color: #777; font-size: 95%;margin-bottom: 0px;}
